lab1/Test/L1-A-0-80.cmm
float fr ( float p9mtAHbFmvzyltxKXi4Q , int uYx5UMEBwNj 
  [ 614036615 ] [ 367176972 ] , float eC8rJRVlV9V0icaT5Cx 
  , ^struct bGbX {
}PlN3COZ [ 980311347 ] [ 909678018 ] , int qeGfD7ju 
  ) {
  float Q4 , t1lMlHxW6d6Uf = - - - wu_ - ! lDWKuvVMCTn_cF2qNu6U 
    * hOgTgdSlv != - ZKrOu0Mnsh7Oxwtf * JsAST20yF9oAMD9bf 
    '* C3C * B0 > ! j / Ch_K55VOxCElQNk_5Pr - T2Zok9mtEBRYyWPynIn 
    > ! cFZi * Zt6h3cE4ZiT / RJlxHun8k + LDSmjS6 + Md 
    - fP0scaj0C2ttpZSU - zYTcARcV + JzGyEYBQ - C7apd2vAj3ZE 
    - RVP - dyPaJhsclRs > _ztL ( i7rV9b2g ) [ wkDsGezpGO 
    ] [ aeWki0otEFadsw ] - xdG7gPayOjUCp != qy0i0iBPOX2KSgfgmNr 
    ( N66oHBgIlJ8JPETMdkcr ) + QdXDBAiHj8MCBq0gi3bD + 
    h2e5wztypeDDL8 - GgW2ftF - JYenHIk56CsI != OOLgnrSqE 
    / WRkLEyczWE7zAszO7w <= - iyDKQ6vboS9GWYgsADLJ - uikhdGJfh 
    + lWjijk9PsGXytx7uf0LJ + qZ5yE + QV3tFYZ - kIiHkfY 
    - SrsX6ItT9cBMRgpxVKu - hA >= ! fTOv8PDLkh > ! g > 
    449400677 * cH1Q / b7ipn7k58de8SqbiP * BrUqalm + LZ7Tb2lcRocByHI 
    <= ! uOUE54Ua * i * DXmE / qmHfpL4Bn5Da - x2aJl_5CC5 
    + YY4Ne9 - Uot0xtPa_VzZbpadg_o > ! A31nInYm2MqgI / 
    KZgo8jtpj1Jskc0QJiz9 * ty / yAmCrYd - iuoEJkfgraJwktEJ 
    != H0MOzA ( pEhkViyohWq3 ) [ _yKWEr7L ] / RzeYjC7T7 
    * ohqlw8aptb / kfdYtAoT - bXy + yma - KGFcJ9pTZ3 < 
    - UOoh27lz_NZy_kDGInn + CU1ppvifwc - yJ2CzKowf > - 
    l * A0b6E4h * iZ6HDeQeEE + qv - ADeBvFfO5n1Jxgd <= 
    ( fhoQmpHAqHL0ZIJCg1Rh ) / aP - cr9VOJspdw - Beb3oa 
    - oa - h98 >= ! iEdT * JMiRl9j7NrZj * csrfQdBeHm - 
    _mRAK0FYQh1HhYBr + Y07VlqAZyAEW - L65 >= JqZ ( ) [ 
    c ] . TvPNhaSA9Ev . ady1ekmnT [ NCV_ ] / bF9uZyesbZ 
    * sop0czZbbZvjJ + TVQ_E + cviXwvg1HRuz + TZma - BE2imr7lkUDbTO 
    != - ZvHAk3nD9uIZdp * ws * hF8s8TITB1 * HcZz_tiih_ 
    / msXGVrUSutH6r7p5 / Y_P8DsRLhBHFfYETvZUN / sgTDFq 
    * fQOTk1X6xPtbQIvauZ - cvxXGa43hJZAJHL == ! Cvdg_ctFpeZI4 
    + LnQhyhR6 - I - g01YK4uH9pRnXut0J + kLpMGvOnEJ == 
    ! aVWtOEWfG7h5mnIPig / DlV9o7gb / j5VDBeneApiOF4J 
    * ti_Wh6Q - BeoqZ6h_PL + XV + fdVEojHkwWLaj4H3uu6 
    <= 19681317 [ J ] . YMnBe8prBPzwIVA_dqn * Z3yguu0Az96Ofu06 
    / q + ydUdl73zD - cejJriA + V0qI3BWUO5DCqlA + rUZvVaTMSkzBm836VK05 
    - Lq + VWZR6kJsvUi + amy1UD_V + a + oWVSppmy2ykn0bvc8X 
    < 298129957 - fHFlOnXwF0il9Cf8j < - VL >= ! EBucj 
    / bDTiTNTsgZTj * DCITRo - uKGfBcJl4wIvxU + pv == ( 
    tXrR_ ) + qwDb + TLF1JE <= ! o01u6cCOCG6eU7kfS / SyXnZL8TnJaa5t 
    != - XiUCe * AWhB0Y6NLrYxvzSu0p + WXdMvbDJ6w389Or6Ml 
    <= ngSH ( ) / ZudQXt886qj - elzX5rtegqTj2y7TELa + 
    ON7eiiXCrv - B6PfPQ_0i + bGnVulJZy86YFV2 + IkzJYheB6AGrSbXoDZEs 
    - BGGEeq_nmzHIe090 <= 1224760308.665259988 + uo6LWyj6MuyQwCXPqJS 
    + Dgcfhv0Yd8O7Jx9g0CI <= ( b ) * ZVi14NUeIGDEkcN / 
    iLq23Od > ! ZF4k7WB5PKjhDZ - fQlJyy0AMetynAj == VLShTaF1r84 
    ( TTQTmtdqq3XjjYC ) / htAjsFd + V5C + Lok8rGOxd61J5 
    + a - v > 799990282.533939617 / A7QSOnBNlfwQfKvHH9AD 
    / YcnQC9O58CsbCd9n9e * UQIUb8 * gaYxdaY9V5fZwH * TACmdLUlOvB6VLyEjA 
    * RnB8V * qDTLcv2go + O0zK3KTmtswjNjHkfO <= IyH7hkoY2mtBLOu 
    ( ) < - OZekj != ! bmkTNsRV8GJBv2 * og9ZoQZhhVwoMB5 
    * Yj3gRFxTFBImDiahTZ0 * VFRkFkTc3 * odLYRK0 ;
  if ( WmY4haGLH * SU9W ( ) == kxmjWT7oLDHslBL7cI 
    ( ) \[ ! DO98O0NVCvxl6y = EULbIwLR8myHZF2ItTT ] ) 
      if ( - r - mIg2zZWKlOLSLPh + t8eCYgTFEWW2lfjpmF 
    + eY3U2lx - DUAcszCwsghw3M == rGrGWoGzfuQc_lgf )   GVV9A3AWL8 
    ;
else   WmSp7aQ3Zq6II ;


}
float fSnRURkB [ 1093447722 ] 
;
int dUPJju_vQpt4aaHJY ( ) {
}
